updated the index file.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+    <title>JavaScript Quiz</title>
+    <link rel="stylesheet" href="quiz.css">
+</head>
 <body>
-  
+    <h1>JavaScript Quiz</h1>
+    <div id="quiz-container">
+        <div id="question-container">
+            <p id="question"></p>
+            <ul id="options"></ul>
+        </div>
+        <div id="feedback-container"></div>
+    </div>
+    <button id="start-btn">Start Quiz</button>
+    <script src="quiz.js"></script>
 </body>
 </html>
