--- a/index.html
+++ b/index.html
@@ -7,18 +7,41 @@
   <title>Document</title>
 </head>
     <title>JavaScript Quiz</title>
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="/Assets/css/style.css">
 </head>
 <body>
     <h1>JavaScript Quiz</h1>
     <div id="quiz-container">
-        <div id="question-container">
-            <p id="question"></p>
-            <ul id="options"></ul>
-        </div>
-        <div id="feedback-container"></div>
-    </div>
-    <button id="start-btn">Start Quiz</button>
-    <script src="quiz.js"></script>
+        <p id="question-text"></p>
+        <form id="quiz-form">
+            <label>
+                <input type="radio" name="answer" value="a">
+                <span id="option-a"></span>
+            </label>
+            <label>
+              <input type="radio" name="answer" value="b">
+              <span id="option-b"></span>
+          </label>
+          <label>
+              <input type="radio" name="answer" value="c">
+              <span id="option-c"></span>
+          </label>
+          <label>
+              <input type="radio" name="answer" value="d">
+              <span id="option-d"></span>
+          </label>
+          <input type="submit" value="Submit">
+      </form>
+  </div>
+  <div id="result-container">
+      <p id="result-text"></p>
+      <form id="initials-form">
+          <label>
+              <input type="text" id="initials-input" maxlength="3">
+          </label>
+          <input type="submit" value="Save">
+      </form>
+  </div>
+  <script src="Assets/js/script.js"></script>
 </body>
 </html>
