updated HTML to fix the links for CSS and JS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Coding Quiz</title>
-    <link rel="stylesheet" href="/Assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Coding Quiz</h1>
@@ -27,6 +27,6 @@
         <p id="timer-text">Time: <span id="timer-value">60</span> seconds</p>
     </div>
 
-    <script src="/Assets/js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
